Start step status
