# signalcd/proto/types.pb.go
@@ -256,6 +256,7 @@ type Step struct {
 	Image                string   `protobuf:"bytes,2,opt,name=image,proto3" json:"image,omitempty"`
 	ImagePullSecrets     []string `protobuf:"bytes,3,rep,name=ImagePullSecrets,proto3" json:"ImagePullSecrets,omitempty"`
 	Commands             []string `protobuf:"bytes,4,rep,name=commands,proto3" json:"commands,omitempty"`
+	Status               *Status  `protobuf:"bytes,5,opt,name=status,proto3" json:"status,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -314,11 +315,19 @@ func (m *Step) GetCommands() []string {
 	return nil
 }
 
+func (m *Step) GetStatus() *Status {
+	if m != nil {
+		return m.Status
+	}
+	return nil
+}
+
 type Check struct {
 	Name                 string             `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	Image                string             `protobuf:"bytes,2,opt,name=image,proto3" json:"image,omitempty"`
 	ImagePullSecrets     []string           `protobuf:"bytes,3,rep,name=ImagePullSecrets,proto3" json:"ImagePullSecrets,omitempty"`
 	Duration             *duration.Duration `protobuf:"bytes,4,opt,name=duration,proto3" json:"duration,omitempty"`
+	Status               *Status            `protobuf:"bytes,5,opt,name=status,proto3" json:"status,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}           `json:"-"`
 	XXX_unrecognized     []byte             `json:"-"`
 	XXX_sizecache        int32              `json:"-"`
@@ -377,6 +386,68 @@ func (m *Check) GetDuration() *duration.Duration {
 	return nil
 }
 
+func (m *Check) GetStatus() *Status {
+	if m != nil {
+		return m.Status
+	}
+	return nil
+}
+
+type Status struct {
+	ExitCode             int64                `protobuf:"varint,1,opt,name=exitCode,proto3" json:"exitCode,omitempty"`
+	Started              *timestamp.Timestamp `protobuf:"bytes,2,opt,name=started,proto3" json:"started,omitempty"`
+	Stopped              *timestamp.Timestamp `protobuf:"bytes,3,opt,name=stopped,proto3" json:"stopped,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
+	XXX_unrecognized     []byte               `json:"-"`
+	XXX_sizecache        int32                `json:"-"`
+}
+
+func (m *Status) Reset()         { *m = Status{} }
+func (m *Status) String() string { return proto.CompactTextString(m) }
+func (*Status) ProtoMessage()    {}
+func (*Status) Descriptor() ([]byte, []int) {
+	return fileDescriptor_7c4df36a331e75e3, []int{5}
+}
+
+func (m *Status) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_Status.Unmarshal(m, b)
+}
+func (m *Status) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_Status.Marshal(b, m, deterministic)
+}
+func (m *Status) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Status.Merge(m, src)
+}
+func (m *Status) XXX_Size() int {
+	return xxx_messageInfo_Status.Size(m)
+}
+func (m *Status) XXX_DiscardUnknown() {
+	xxx_messageInfo_Status.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Status proto.InternalMessageInfo
+
+func (m *Status) GetExitCode() int64 {
+	if m != nil {
+		return m.ExitCode
+	}
+	return 0
+}
+
+func (m *Status) GetStarted() *timestamp.Timestamp {
+	if m != nil {
+		return m.Started
+	}
+	return nil
+}
+
+func (m *Status) GetStopped() *timestamp.Timestamp {
+	if m != nil {
+		return m.Stopped
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterEnum("signalcd.DeploymentStatus_Phase", DeploymentStatus_Phase_name, DeploymentStatus_Phase_value)
 	proto.RegisterType((*Deployment)(nil), "signalcd.Deployment")
@@ -384,6 +455,7 @@ func init() {
 	proto.RegisterType((*Pipeline)(nil), "signalcd.Pipeline")
 	proto.RegisterType((*Step)(nil), "signalcd.Step")
 	proto.RegisterType((*Check)(nil), "signalcd.Check")
+	proto.RegisterType((*Status)(nil), "signalcd.Status")
 }
 
 func init() {
@@ -391,38 +463,41 @@ func init() {
 }
 
 var fileDescriptor_7c4df36a331e75e3 = []byte{
-	// 521 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x93, 0x4f, 0x6f, 0xd3, 0x30,
-	0x18, 0xc6, 0x49, 0xd3, 0x64, 0xe9, 0x3b, 0xe8, 0x22, 0x6b, 0x42, 0xa1, 0x07, 0xa8, 0x22, 0x24,
-	0x2a, 0x0e, 0xa9, 0x54, 0x60, 0xf7, 0xd1, 0x86, 0x51, 0xad, 0x4a, 0x2b, 0xa7, 0x05, 0x89, 0x9b,
-	0x97, 0x78, 0xad, 0xb5, 0xfc, 0x53, 0xec, 0x4a, 0xec, 0x7b, 0xf0, 0x31, 0xb8, 0x71, 0xe0, 0xeb,
-	0x21, 0x3b, 0x7f, 0x3a, 0x6d, 0x42, 0xe3, 0xc2, 0xa9, 0x7e, 0xfd, 0xfc, 0x1e, 0xfb, 0xf1, 0xfb,
-	0x36, 0x30, 0xe0, 0x6c, 0x9b, 0x91, 0x24, 0x8a, 0xc7, 0x45, 0x99, 0x8b, 0x7c, 0x2c, 0x6e, 0x0b,
-	0xca, 0x3d, 0xb5, 0x46, 0x56, 0xa3, 0x0d, 0x5e, 0x6d, 0xf3, 0x7c, 0x9b, 0xd0, 0x8a, 0xb9, 0xda,
-	0x5f, 0x8f, 0x05, 0x4b, 0x29, 0x17, 0x24, 0x2d, 0x2a, 0x74, 0xf0, 0xf2, 0x3e, 0x10, 0xef, 0x4b,
-	0x22, 0x58, 0x9e, 0x55, 0xba, 0xfb, 0xb3, 0x03, 0x30, 0xa3, 0x45, 0x92, 0xdf, 0xa6, 0x34, 0x13,
-	0xe8, 0x39, 0x98, 0xd9, 0x3e, 0xbd, 0xa2, 0xa5, 0xa3, 0x0d, 0xb5, 0x91, 0x8e, 0xeb, 0x0a, 0xbd,
-	0x87, 0xa3, 0xa8, 0xa4, 0x44, 0xd0, 0xd8, 0xe9, 0x0c, 0xb5, 0xd1, 0xf1, 0x64, 0xe0, 0x55, 0x07,
-	0x7b, 0xcd, 0xc1, 0xde, 0xba, 0xb9, 0x19, 0x37, 0xa8, 0x74, 0x71, 0x41, 0x4a, 0xe9, 0xd2, 0x1f,
-	0x77, 0xd5, 0x28, 0x3a, 0x03, 0xeb, 0x9a, 0x65, 0x8c, 0xef, 0x68, 0xec, 0x74, 0x1f, 0xb5, 0xb5,
-	0x2c, 0x9a, 0x80, 0xc9, 0x05, 0x11, 0x7b, 0xee, 0x18, 0xb5, 0xab, 0x69, 0x93, 0x77, 0x78, 0x61,
-	0xa8, 0x08, 0x5c, 0x93, 0xc8, 0x03, 0xab, 0x60, 0x05, 0x4d, 0x58, 0x46, 0x1d, 0x53, 0xb9, 0xd0,
-	0xc1, 0xb5, 0xaa, 0x15, 0xdc, 0x32, 0xee, 0x6f, 0x0d, 0xec, 0xfb, 0x87, 0xa1, 0x33, 0x30, 0x8a,
-	0x1d, 0xe1, 0x54, 0xf5, 0xac, 0x3f, 0x19, 0xfe, 0xfd, 0x5e, 0x6f, 0x25, 0x39, 0x5c, 0xe1, 0xee,
-	0x0d, 0x18, 0xaa, 0x46, 0xa7, 0x60, 0xcf, 0x96, 0xc1, 0x7a, 0x13, 0xfa, 0xeb, 0xcf, 0xf3, 0xf0,
-	0xcb, 0xf9, 0x62, 0xe3, 0xdb, 0x4f, 0xd0, 0x31, 0x1c, 0x6d, 0x82, 0xcb, 0x60, 0xf9, 0x35, 0xb0,
-	0x35, 0x59, 0x84, 0x9b, 0xe9, 0xd4, 0x0f, 0x43, 0xbb, 0x23, 0x8b, 0x4f, 0xe7, 0xf3, 0xc5, 0x06,
-	0xfb, 0xb6, 0x8e, 0x9e, 0x82, 0xb5, 0xc2, 0xcb, 0x0b, 0x2c, 0xa5, 0xae, 0x94, 0x56, 0x7e, 0x30,
-	0x9b, 0x07, 0x17, 0xb6, 0x81, 0x00, 0xcc, 0xcb, 0xf9, 0x62, 0xe1, 0xcf, 0x6c, 0xd3, 0xfd, 0xa5,
-	0x81, 0xd5, 0x3c, 0x08, 0xf5, 0xa1, 0xc3, 0x62, 0x15, 0xb7, 0x87, 0x3b, 0x2c, 0x46, 0x08, 0xba,
-	0x19, 0x49, 0xa9, 0x9a, 0x6d, 0x0f, 0xab, 0xf5, 0xdd, 0x91, 0xeb, 0xff, 0x3e, 0xf2, 0xd7, 0x60,
-	0x70, 0x41, 0x0b, 0xee, 0x74, 0x87, 0xfa, 0xe8, 0x78, 0xd2, 0x3f, 0xf4, 0x22, 0x14, 0xb4, 0xc0,
-	0x95, 0x88, 0xde, 0x80, 0x19, 0xed, 0x68, 0x74, 0x23, 0x47, 0x25, 0xb1, 0x93, 0x03, 0x36, 0x95,
-	0xfb, 0xb8, 0x96, 0xdd, 0xef, 0xd0, 0x95, 0xbe, 0x36, 0xa0, 0x76, 0x27, 0xe0, 0x29, 0x18, 0x2c,
-	0x25, 0xdb, 0x26, 0x75, 0x55, 0xa0, 0xb7, 0x60, 0xcf, 0xe5, 0x62, 0xb5, 0x4f, 0x92, 0x90, 0x46,
-	0x25, 0x15, 0xdc, 0xd1, 0x87, 0xfa, 0xa8, 0x87, 0x1f, 0xec, 0xa3, 0x01, 0x58, 0x51, 0x9e, 0xa6,
-	0x24, 0x8b, 0xab, 0xbc, 0x3d, 0xdc, 0xd6, 0xee, 0x0f, 0x0d, 0x0c, 0x95, 0xe5, 0x3f, 0xdd, 0xfd,
-	0x01, 0xac, 0xe6, 0x53, 0xac, 0xff, 0xe5, 0x2f, 0x1e, 0xf4, 0x77, 0x56, 0x03, 0xb8, 0x45, 0x3f,
-	0x9e, 0x7c, 0x7b, 0xd6, 0xb4, 0xaa, 0xc2, 0x4c, 0xf5, 0xf3, 0xee, 0x4f, 0x00, 0x00, 0x00, 0xff,
-	0xff, 0xfd, 0x2b, 0x65, 0x8e, 0x30, 0x04, 0x00, 0x00,
+	// 570 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x94, 0xcd, 0x6e, 0xd3, 0x40,
+	0x10, 0xc7, 0xb1, 0x1d, 0xbb, 0xce, 0x14, 0x5a, 0x6b, 0x55, 0x21, 0xe3, 0x03, 0x44, 0x16, 0x12,
+	0x11, 0x07, 0x47, 0x0a, 0xd0, 0x7b, 0x49, 0x4c, 0x89, 0x1a, 0x39, 0xd1, 0x3a, 0x01, 0x89, 0x9b,
+	0x6b, 0x6f, 0x13, 0xab, 0xfe, 0x92, 0x77, 0x23, 0xd1, 0xb7, 0xe0, 0x19, 0x38, 0x73, 0xe3, 0xc0,
+	0x8d, 0x67, 0x43, 0xbb, 0xfe, 0x48, 0x94, 0x0a, 0x35, 0x1c, 0x38, 0x79, 0xc7, 0xf3, 0xfb, 0xaf,
+	0xff, 0xb3, 0xb3, 0x63, 0xb0, 0x68, 0xbc, 0xca, 0x82, 0x24, 0x8c, 0x06, 0x45, 0x99, 0xb3, 0x7c,
+	0xc0, 0xee, 0x0a, 0x42, 0x1d, 0xb1, 0x46, 0x7a, 0x93, 0xb3, 0x5e, 0xac, 0xf2, 0x7c, 0x95, 0x90,
+	0x8a, 0xb9, 0xde, 0xdc, 0x0c, 0x58, 0x9c, 0x12, 0xca, 0x82, 0xb4, 0xa8, 0x50, 0xeb, 0xf9, 0x3e,
+	0x10, 0x6d, 0xca, 0x80, 0xc5, 0x79, 0x56, 0xe5, 0xed, 0x1f, 0x32, 0xc0, 0x98, 0x14, 0x49, 0x7e,
+	0x97, 0x92, 0x8c, 0xa1, 0xa7, 0xa0, 0x65, 0x9b, 0xf4, 0x9a, 0x94, 0xa6, 0xd4, 0x93, 0xfa, 0x0a,
+	0xae, 0x23, 0xf4, 0x16, 0x8e, 0xc2, 0x92, 0x04, 0x8c, 0x44, 0xa6, 0xdc, 0x93, 0xfa, 0xc7, 0x43,
+	0xcb, 0xa9, 0x36, 0x76, 0x9a, 0x8d, 0x9d, 0x45, 0xf3, 0x65, 0xdc, 0xa0, 0x5c, 0x45, 0x59, 0x50,
+	0x72, 0x95, 0xf2, 0xb0, 0xaa, 0x46, 0xd1, 0x39, 0xe8, 0x37, 0x71, 0x16, 0xd3, 0x35, 0x89, 0xcc,
+	0xce, 0x83, 0xb2, 0x96, 0x45, 0x43, 0xd0, 0x28, 0x0b, 0xd8, 0x86, 0x9a, 0x6a, 0xad, 0x6a, 0x8e,
+	0xc9, 0xd9, 0x56, 0xe8, 0x0b, 0x02, 0xd7, 0x24, 0x72, 0x40, 0x2f, 0xe2, 0x82, 0x24, 0x71, 0x46,
+	0x4c, 0x4d, 0xa8, 0xd0, 0x56, 0x35, 0xaf, 0x33, 0xb8, 0x65, 0xec, 0x5f, 0x12, 0x18, 0xfb, 0x9b,
+	0xa1, 0x73, 0x50, 0x8b, 0x75, 0x40, 0x89, 0x38, 0xb3, 0x93, 0x61, 0xef, 0xef, 0xdf, 0x75, 0xe6,
+	0x9c, 0xc3, 0x15, 0x6e, 0xdf, 0x82, 0x2a, 0x62, 0x74, 0x06, 0xc6, 0x78, 0xe6, 0x2d, 0x96, 0xbe,
+	0xbb, 0xf8, 0x38, 0xf1, 0x3f, 0x5d, 0x4c, 0x97, 0xae, 0xf1, 0x08, 0x1d, 0xc3, 0xd1, 0xd2, 0xbb,
+	0xf2, 0x66, 0x9f, 0x3d, 0x43, 0xe2, 0x81, 0xbf, 0x1c, 0x8d, 0x5c, 0xdf, 0x37, 0x64, 0x1e, 0x7c,
+	0xb8, 0x98, 0x4c, 0x97, 0xd8, 0x35, 0x14, 0xf4, 0x18, 0xf4, 0x39, 0x9e, 0x5d, 0x62, 0x9e, 0xea,
+	0xf0, 0xd4, 0xdc, 0xf5, 0xc6, 0x13, 0xef, 0xd2, 0x50, 0x11, 0x80, 0x76, 0x35, 0x99, 0x4e, 0xdd,
+	0xb1, 0xa1, 0xd9, 0x3f, 0x25, 0xd0, 0x9b, 0x82, 0xd0, 0x09, 0xc8, 0x71, 0x24, 0xec, 0x76, 0xb1,
+	0x1c, 0x47, 0x08, 0x41, 0x27, 0x0b, 0x52, 0x22, 0x7a, 0xdb, 0xc5, 0x62, 0xbd, 0xdb, 0x72, 0xe5,
+	0xf0, 0x96, 0xbf, 0x04, 0x95, 0x32, 0x52, 0x50, 0xb3, 0xd3, 0x53, 0xfa, 0xc7, 0xc3, 0x93, 0xed,
+	0x59, 0xf8, 0x8c, 0x14, 0xb8, 0x4a, 0xa2, 0x57, 0xa0, 0x85, 0x6b, 0x12, 0xde, 0xf2, 0x56, 0x71,
+	0xec, 0x74, 0x8b, 0x8d, 0xf8, 0x7b, 0x5c, 0xa7, 0xed, 0xef, 0x12, 0x74, 0xb8, 0xb0, 0x75, 0x28,
+	0xed, 0x38, 0x3c, 0x03, 0x35, 0x4e, 0x83, 0x55, 0x63, 0xbb, 0x0a, 0xd0, 0x6b, 0x30, 0x26, 0x7c,
+	0x31, 0xdf, 0x24, 0x89, 0x4f, 0xc2, 0x92, 0x30, 0x6a, 0x2a, 0x3d, 0xa5, 0xdf, 0xc5, 0xf7, 0xde,
+	0x23, 0x0b, 0xf4, 0x30, 0x4f, 0xd3, 0x20, 0x8b, 0x2a, 0xc3, 0x5d, 0xdc, 0xc6, 0xa8, 0xbf, 0x77,
+	0x9d, 0x8c, 0xdd, 0x52, 0x76, 0x2f, 0x91, 0xfd, 0x5b, 0x02, 0x55, 0xd8, 0xfe, 0x4f, 0x2e, 0xdf,
+	0x81, 0xde, 0x4c, 0x6d, 0x3d, 0x10, 0xcf, 0xee, 0xb5, 0x62, 0x5c, 0x03, 0xb8, 0x45, 0xff, 0xa1,
+	0x80, 0x6f, 0x12, 0x68, 0xf5, 0x5d, 0xb6, 0x40, 0x27, 0x5f, 0x63, 0x36, 0xca, 0x23, 0x52, 0xff,
+	0x02, 0xda, 0x78, 0x77, 0x9c, 0xe5, 0xc3, 0xc7, 0x59, 0xa8, 0xf2, 0xa2, 0x38, 0xf4, 0x27, 0x20,
+	0xd0, 0xf7, 0xa7, 0x5f, 0x9e, 0x34, 0x6e, 0x2b, 0x4c, 0x13, 0x8f, 0x37, 0x7f, 0x02, 0x00, 0x00,
+	0xff, 0xff, 0x8f, 0xe8, 0xcf, 0xf9, 0x18, 0x05, 0x00, 0x00,
 }
